# ClaudeMemory

./: .gitignore  CLAUDE.md  MEMORY.md  README.md
.claude/: settings.json  settings.local.json
agents/: _orchestrator.md  _shared-output.md  architect-agent.md  browser-agent.md  compliance-agent.md  debug-agent.md  docs-agent.md  estimator-agent.md  evaluator-agent.md  explore-agent.md  performance-agent.md  refactor-agent.md  research-agent.md  reviewer-agent.md  security-agent.md  standards-validator-agent.md  teacher-agent.md  test-agent.md  ticket-analyst-agent.md  ui-agent.md  workflow-agent.md
docs/: README.md  agents.md  architecture.md  knowledge-bases.md  rules.md
knowledge/: api-design.md  architecture.md  browser-testing.md  code-critique.md  code-exploration.md  code-teaching.md  coding-standards.md  completion-verification.md  context-engineering.md  debugging.md  documentation.md  error-handling.md  error-recovery.md  file-editing-windows.md  memory-management.md  model-selection.md  multi-agent-failures.md  observability.md  organization.md  performance.md  playwright.md  pr-review.md  refactoring.md  (+14 more)
mcp-rag-server/: .gitignore  README.md  pyproject.toml
mcp-rag-server/src/rag_server/: __init__.py  __main__.py  config.py  server.py
mcp-rag-server/src/rag_server/core/: embedding.py  metadata.py  store.py  watcher.py
mcp-rag-server/src/rag_server/indexing/: engine.py  markdown_chunker.py  xml_chunker.py
mcp-rag-server/src/rag_server/ports/: embedding_port.py  store_port.py  watcher_port.py
mcp-rag-server/src/rag_server/tools/: search.py
(+16 files in other folders)
