[project]
name = "rag-server"
version = "0.1.0"
description = "MCP RAG server for ClaudeMemory - semantic search over knowledge bases, agent definitions, and workspace history"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
